# braintransform

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_package.yml
braintransform/: info.py  issues_to_pages.py
braintransform/tests/: test_issues_to_pages.py
data/: __init__.py  expected_project_4.md  expected_project_9.md
scripts/: transform_issues_to_pages.py
scripts/tests/: test_transform_issues_to_pages.py
