[metadata]
author = brainhack
author_email = brainhackorg@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
description = Issues to event project page generation tool
download_url = https://github.com/brainhackorg/braintransform
keywords = hackathon, neneuroscience, open science, open source
long_description = file: README.md
maintainer = brainhack
maintainer_email = brainhackorg@gmail.com
name = braintransform

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    regex
    requests
scripts =
    scripts/transform_issues_to_pages.py

[options.extras_require]
testing =
    pytest == 5.3.*
    pytest-cov
    pytest-pep8
    pytest-xdist
    pytest_console_scripts
dev =
    flake8 == 3.9.2
    flake8-docstrings == 1.6.0
    %(testing)s
